--- a/graph/BaliseGraphe.html
+++ b/graph/BaliseGraphe.html
@@ -6,7 +6,7 @@
 	
 	<body>
 		<H1>Wallah qu'il est beau ce graphique?</H1>
-	<IMG src='HistoEmp.php'>
+	<IMG src='HistoCourbe.php'>
 	
 	</body>
 </html>
